Fixed overlap and added max-width

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -55,8 +55,8 @@ img {
 
 .sprite {
 	display: block;
-	height: 200px;
-	width: auto;
+	height: auto !important;
+	width: 100% !important;
 }
 
 .header {
